@@ -1,7 +1,10 @@
+
+
 package io.plaidapp.designernews.data.comments;
 
 import com.nhaarman.mockitokotlin2.DoAnswer;
-import com.nhaarman.mockitokotlin2.mock;
+import com.nhaarman.mockitokotlin2.KotlinMockitos;
+import com.nhaarman.mockitokotlin2.mock.Mock;
 import com.nhaarman.mockitokotlin2.whenever;
 import io.plaidapp.core.data.Result;
 import io.plaidapp.core.designernews.data.api.DesignerNewsService;
@@ -13,157 +16,142 @@ import io.plaidapp.designernews.repliesResponses;
 import io.plaidapp.designernews.replyResponse1;
 import java.io.IOException;
 import java.net.UnknownHostException;
-import java.util.Arrays;
 import java.util.List;
-import java.util.concurrent.CompletableDeferred;
-import java.util.concurrent.ExecutionException;
+import kotlinx.coroutines.CompletableDeferred;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
-import retrofit2.Call;
-import retrofit2.Callback;
 import retrofit2.Response;
-import retrofit2.Retrofit;
-import retrofit2.converter.gson.GsonConverterFactory;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 public class CommentsRemoteDataSourceTest {
 
-  private final String body = "Plaid is awesome";
+    private final String body = "Plaid is awesome";
+    private Mock<DesignerNewsService> service;
+    private CommentsRemoteDataSource dataSource;
 
-  private String body = "Plaid is awesome";
+    @Before
+    public void setUp() {
+        service = KotlinMockitos.mock(DesignerNewsService.class);
+        dataSource = new CommentsRemoteDataSource(service.getObject());
+    }
 
-  private DesignerNewsService service = mock(DesignerNewsService.class);
-  private CommentsRemoteDataSource dataSource = new CommentsRemoteDataSource(
-    service
-  );
+    @Test
+    public void getComments_whenRequestSuccessful() throws Exception {
+        Response<List<CommentResponse>> result = Response.success(repliesResponses);
+        CompletableDeferred<Response<List<CommentResponse>>> deferred = new CompletableDeferred<>();
+        deferred.complete(result);
+        when(service.getObject().getComments("1")).thenReturn(deferred);
 
-  @Test
-  public void getComments_whenRequestSuccessful()
-    throws ExecutionException, InterruptedException {
-    CompletableDeferred<Response<List<CommentResponse>>> result = new CompletableDeferred<>();
-    result.complete(Response.success(repliesResponses));
+        Result<List<CommentResponse>> response = dataSource.getComments(List.of(1L));
 
-    whenever(service.getComments("1")).thenReturn(result);
+        Assert.assertNotNull(response);
+        assertEquals(Result.Success.create(repliesResponses), response);
+    }
 
-    Result<List<CommentResponse>> response = dataSource
-      .getComments(Arrays.asList(1L))
-      .get();
+    @Test
+    public void getComments_forMultipleComments() throws Exception {
+        Response<List<CommentResponse>> result = Response.success(repliesResponses);
+        CompletableDeferred<Response<List<CommentResponse>>> deferred = new CompletableDeferred<>();
+        deferred.complete(result);
+        when(service.getObject().getComments("11,12")).thenReturn(deferred);
 
-    Assert.assertNotNull(response);
-    Assert.assertEquals(Result.Success(repliesResponses), response);
-  }
+        Result<List<CommentResponse>> response = dataSource.getComments(List.of(11L, 12L));
 
-  @Test
-  public void getComments_forMultipleComments()
-    throws ExecutionException, InterruptedException {
-    CompletableDeferred<Response<List<CommentResponse>>> result = new CompletableDeferred<>();
-    result.complete(Response.success(repliesResponses));
+        Assert.assertNotNull(response);
+        assertEquals(Result.Success.create(repliesResponses), response);
+    }
 
-    whenever(service.getComments("11,12")).thenReturn(result);
+    @Test
+    public void getComments_whenRequestFailed() throws Exception {
+        Response<List<CommentResponse>> result = Response.error(
+                400,
+                errorResponseBody
+        );
+        CompletableDeferred<Response<List<CommentResponse>>> deferred = new CompletableDeferred<>();
+        deferred.complete(result);
+        when(service.getObject().getComments("1")).thenReturn(deferred);
 
-    Result<List<CommentResponse>> response = dataSource
-      .getComments(Arrays.asList(11L, 12L))
-      .get();
+        Result<List<CommentResponse>> response = dataSource.getComments(List.of(1L));
 
-    Assert.assertNotNull(response);
-    Assert.assertEquals(Result.Success(repliesResponses), response);
-  }
+        Assert.assertTrue(response instanceof Result.Error);
+    }
 
-  @Test
-  public void getComments_whenRequestFailed()
-    throws ExecutionException, InterruptedException {
-    CompletableDeferred<Response<List<CommentResponse>>> result = new CompletableDeferred<>();
-    result.complete(Response.error(400, errorResponseBody));
+    @Test
+    public void getComments_whenResponseEmpty() throws Exception {
+        Response<List<CommentResponse>> result = Response.success(null);
+        CompletableDeferred<Response<List<CommentResponse>>> deferred = new CompletableDeferred<>();
+        deferred.complete(result);
+        when(service.getObject().getComments("1")).thenReturn(deferred);
 
-    whenever(service.getComments("1")).thenReturn(result);
+        Result<List<CommentResponse>> response = dataSource.getComments(List.of(1L));
 
-    Result<List<CommentResponse>> response = dataSource
-      .getComments(Arrays.asList(1L))
-      .get();
+        Assert.assertTrue(response instanceof Result.Error);
+    }
 
-    Assert.assertTrue(response instanceof Result.Error);
-  }
+    @Test
+    public void getComments_whenException() throws Exception {
+        doAnswer(invocation -> {
+            throw new UnknownHostException();
+        }).when(service.getObject()).getComments("1");
 
-  @Test
-  public void getComments_whenResponseEmpty()
-    throws ExecutionException, InterruptedException {
-    CompletableDeferred<Response<List<CommentResponse>>> result = new CompletableDeferred<>();
-    result.complete(Response.success((List<CommentResponse>) null));
+        Result<List<CommentResponse>> response = dataSource.getComments(List.of(1L));
 
-    whenever(service.getComments("1")).thenReturn(result);
+        Assert.assertTrue(response instanceof Result.Error);
+    }
 
-    Result<List<CommentResponse>> response = dataSource
-      .getComments(Arrays.asList(1L))
-      .get();
+    @Test(expected = IllegalStateException.class)
+    public void comment_whenParentCommentIdAndStoryIdNull() throws Exception {
+        dataSource.comment(body, null, null, 11L);
+    }
 
-    Assert.assertTrue(response instanceof Result.Error);
-  }
+    @Test
+    public void comment_whenException() throws Exception {
+        NewCommentRequest request = new NewCommentRequest(body, "11", null, "111");
+        doAnswer(invocation -> {
+            throw new UnknownHostException();
+        }).when(service.getObject()).comment(request);
 
-  @Test
-  public void getComments_whenException() throws Exception {
-    Service serviceMock = mock(Service.class);
-    when(serviceMock.getComments("1")).thenThrow(UnknownHostException.class);
-    DataSource dataSource = new DataSource(serviceMock);
+        Result<PostCommentResponse> response = dataSource.comment(body, 11L, null, 111L);
 
-    Result response = dataSource.getComments(Arrays.asList(1L));
-    assertTrue(response instanceof Result.Error);
-  }
+        Assert.assertTrue(response instanceof Result.Error);
+    }
 
-  @Test(expected = IllegalStateException.class)
-  public void comment_whenParentCommentIdAndStoryIdNull()
-    throws ExecutionException, InterruptedException {
-    dataSource.comment("text", null, null, 11L);
-  }
+    @Test
+    public void comment_withNoComments() throws Exception {
+        Response<PostCommentResponse> response = Response.success(new PostCommentResponse(List.of()));
+        NewCommentRequest request = new NewCommentRequest(body, "11", null, "111");
+        CompletableDeferred<Response<PostCommentResponse>> deferred = new CompletableDeferred<>();
+        deferred.complete(response);
+        when(service.getObject().comment(request)).thenReturn(deferred);
 
-  @Test
-  public void comment_whenException() {
-    // Given that the service throws an exception
-    NewCommentRequest request = new NewCommentRequest(body, "11", null, "111");
-    when(service.comment(request))
-      .thenAnswer(invocation -> {
-        throw new UnknownHostException();
-      });
+        Result<PostCommentResponse> result = dataSource.comment(body, 11L, null, 111L);
 
-    // When adding a comment
-    Result response = dataSource.comment(body, 11L, null, 111L);
+        Assert.assertTrue(result instanceof Result.Error);
+    }
 
-    // Then the response is not successful
-    assertTrue(response instanceof Result.Error);
-  }
+    @Test
+    public void comment_withComments() throws Exception {
+        Response<PostCommentResponse> response = Response.success(
+                new PostCommentResponse(List.of(replyResponse1))
+        );
+        NewCommentRequest request = new NewCommentRequest(body, "11", null, "111");
+        CompletableDeferred<Response<PostCommentResponse>> deferred = new CompletableDeferred<>();
+        deferred.complete(response);
+        when(service.getObject().comment(request)).thenReturn(deferred);
 
-  @Test
-  public void comment_withNoComments()
-    throws ExecutionException, InterruptedException {
-    Response<PostCommentResponse> response = Response.success(
-      new PostCommentResponse(null)
-    );
+        Result<PostCommentResponse> result = dataSource.comment(body, 11L, null, 111L);
 
-    NewCommentRequest request = new NewCommentRequest(body, "11", null, "111");
-
-    whenever(service.comment(request)).thenReturn(result);
-
-    Result<CommentResponse> result = dataSource
-      .comment(body, 11L, null, 111L)
-      .get();
-
-    Assert.assertTrue(result instanceof Result.Error);
-  }
-
-  @Test
-  public void comment_withComments()
-    throws ExecutionException, InterruptedException {
-    Response<PostCommentResponse> response = Response.success(
-      new PostCommentResponse(Arrays.asList(replyResponse1))
-    );
-
-    NewCommentRequest request = new NewCommentRequest(body, "11", null, "111");
-
-    whenever(service.comment(request)).thenReturn(result);
-
-    Result<CommentResponse> result = dataSource
-      .comment(body, 11L, null, 111L)
-      .get();
-
-    Assert.assertEquals(result, Result.Success(replyResponse1));
-  }
+        Assert.assertEquals(result, Result.Success.create(replyResponse1));
+    }
 }
