@@ -1,18 +1,16 @@
+
+
 package io.plaidapp.designernews.domain;
 
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyString;
-
-import com.nhaarman.mockitokotlin2.MockitoAnnotations;
-import com.nhaarman.mockitokotlin2.verification.VerificationMode;
+import com.nhaarman.mockitokotlin2.Mockito;
 import com.nhaarman.mockitokotlin2.verify;
-import com.nhaarman.mockitokotlin2.when;
+import com.nhaarman.mockitokotlin2.whenever;
 import io.plaidapp.core.data.Result;
 import io.plaidapp.core.designernews.data.api.DesignerNewsService;
-import io.plaidapp.core.designernews.data.users.model.User;
 import io.plaidapp.designernews.data.comments.CommentsRemoteDataSource;
 import io.plaidapp.designernews.data.comments.CommentsRepository;
 import io.plaidapp.designernews.data.comments.model.CommentResponse;
+import io.plaidapp.core.designernews.data.users.model.User;
 import io.plaidapp.designernews.data.users.UserRemoteDataSource;
 import io.plaidapp.designernews.data.users.UserRepository;
 import io.plaidapp.designernews.errorResponseBody;
@@ -25,12 +23,8 @@ import io.plaidapp.designernews.reply1NoUser;
 import io.plaidapp.designernews.replyResponse1;
 import io.plaidapp.designernews.user1;
 import io.plaidapp.designernews.user2;
-import java.io.IOException;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
 import kotlinx.coroutines.CompletableDeferred;
-import kotlinx.coroutines.RunBlocking;
+import kotlinx.coroutines.Runnable;
 import okhttp3.ResponseBody;
 import org.junit.Assert;
 import org.junit.Before;
@@ -39,169 +33,111 @@ import retrofit2.Call;
 import retrofit2.Callback;
 import retrofit2.Response;
 
+import java.io.IOException;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.concurrent.CountDownLatch;
+
 public class GetCommentsWithRepliesAndUsersUseCaseIntegrationTest {
+    private DesignerNewsService service;
+    private CommentsRemoteDataSource dataSource;
+    private CommentsRepository commentsRepository;
+    private UserRepository userRepository;
+    private GetCommentsWithRepliesAndUsersUseCase repository;
 
-  private DesignerNewsService service = mock(DesignerNewsService.class);
-  private CommentsRemoteDataSource dataSource = new CommentsRemoteDataSource(
-    service
-  );
-  private CommentsRepository commentsRepository = new CommentsRepository(
-    dataSource
-  );
-  private UserRepository userRepository = new UserRepository(
-    new UserRemoteDataSource(service)
-  );
-  private GetCommentsWithRepliesAndUsersUseCase repository = new GetCommentsWithRepliesAndUsersUseCase(
-    new GetCommentsWithRepliesUseCase(commentsRepository),
-    userRepository
-  );
+    @Before
+    public void setup() {
+        service = Mockito.mock(DesignerNewsService.class);
+        dataSource = new CommentsRemoteDataSource(service);
+        commentsRepository = new CommentsRepository(dataSource);
+        userRepository = new UserRepository(new UserRemoteDataSource(service));
+        repository = new GetCommentsWithRepliesAndUsersUseCase(
+                new GetCommentsWithRepliesUseCase(commentsRepository),
+                userRepository
+        );
+    }
 
-  @Test
-  public void getComments_noReplies_whenCommentsAnUserRequestsSuccessful()
-    throws IOException {
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult1 = new CompletableDeferred<>();
-    apiResult1.complete(Response.success(Arrays.asList(replyResponse1)));
-    when(service.getComments("11")).thenReturn(apiResult1);
+    @Test
+    public void getComments_noReplies_whenCommentsAnUserRequestsSuccessful() throws InterruptedException {
+        withComments(replyResponse1, "11");
+        withUsers(listOf(user1), "111");
 
-    CompletableDeferred<Response<List<User>>> apiResult2 = new CompletableDeferred<>();
-    apiResult2.complete(Response.success(Arrays.asList(user1)));
-    when(service.getUsers("111")).thenReturn(apiResult2);
+        Result<List<CommentResponse>> result = repository.getComments(List.of(11L));
 
-    Result<List<CommentResponse>> result = repository.getComments(
-      Arrays.asList(11L)
-    );
+        verify(service).getComments("11");
+        Assert.assertEquals(Result.Success(List.of(reply1)), result);
+    }
 
-    VerificationMode verificationMode = verify(service).getComments("11");
-    verificationMode.times(1);
+    @Test
+    public void getComments_noReplies_whenCommentsRequestFailed() throws InterruptedException {
+        Call<List<CommentResponse>> apiResult = createErrorCall(400, errorResponseBody);
+        whenever(service.getComments("11")).thenReturn(apiResult);
 
-    Assert.assertEquals(Result.Success(Arrays.asList(reply1)), result);
-  }
+        Result<List<CommentResponse>> result = repository.getComments(List.of(11L));
 
-  @Test
-  public void getComments_noReplies_whenCommentsRequestFailed()
-    throws IOException {
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult = new CompletableDeferred<>();
-    apiResult.complete(Response.error(400, errorResponseBody));
-    when(service.getComments("11")).thenReturn(apiResult);
+        Assert.assertNotNull(result);
+        Assert.assertTrue(result instanceof Result.Error);
+    }
 
-    Result<List<CommentResponse>> result = repository.getComments(
-      Arrays.asList(11L)
-    );
+    @Test
+    public void getComments_multipleReplies_whenCommentsAndUsersRequestsSuccessful() throws InterruptedException {
+        withComments(parentCommentResponse, "1");
+        withComments(repliesResponses, "11,12");
+        withUsers(List.of(user1, user2), "222,111");
 
-    Assert.assertNotNull(result);
-    Assert.assertTrue(result instanceof Result.Error);
-  }
+        Result<List<CommentResponse>> result = repository.getComments(List.of(1L));
 
-  @Test
-  public void getComments_multipleReplies_whenCommentsAndUsersRequestsSuccessful()
-    throws IOException {
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult1 = new CompletableDeferred<>();
-    apiResult1.complete(Response.success(Arrays.asList(parentCommentResponse)));
-    when(service.getComments("1")).thenReturn(apiResult1);
+        verify(service).getComments("1");
+        verify(service).getComments("11,12");
+        verify(service).getUsers("222,111");
+        Assert.assertEquals(Result.Success(flattendCommentsWithReplies), result);
+    }
 
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult2 = new CompletableDeferred<>();
-    apiResult2.complete(Response.success(repliesResponses));
-    when(service.getComments("11,12")).thenReturn(apiResult2);
+    @Test
+    public void getComments_multipleReplies_whenRepliesRequestFailed() throws InterruptedException {
+        withComments(parentCommentResponse, "1");
 
-    CompletableDeferred<Response<List<User>>> apiResult3 = new CompletableDeferred<>();
-    apiResult3.complete(Response.success(Arrays.asList(user1, user2)));
-    when(service.getUsers("222,111")).thenReturn(apiResult3);
+        Call<List<CommentResponse>> resultChildrenError = createErrorCall(400, errorResponseBody);
+        whenever(service.getComments("11,12")).thenReturn(resultChildrenError);
 
-    Result<List<CommentResponse>> result = repository.getComments(
-      Arrays.asList(1L)
-    );
+        withUsers(List.of(user2), "222");
 
-    VerificationMode verificationMode1 = verify(service).getComments("1");
-    verificationMode1.times(1);
+        Result<List<CommentResponse>> result = repository.getComments(List.of(1L));
 
-    VerificationMode verificationMode2 = verify(service).getComments("11,12");
-    verificationMode2.times(1);
+        verify(service).getComments("1");
+        verify(service).getComments("11,12");
+        verify(service).getUsers("222");
+        Assert.assertEquals(Result.Success(flattenedCommentsWithoutReplies), result);
+    }
 
-    VerificationMode verificationMode3 = verify(service).getUsers("222,111");
-    verificationMode3.times(1);
+    @Test
+    public void getComments_whenUserRequestFailed() throws InterruptedException {
+        withComments(replyResponse1, "11");
 
-    Assert.assertEquals(Result.Success(flattendCommentsWithReplies), result);
-  }
+        Call<List<User>> userError = createErrorCall(400, errorResponseBody);
+        whenever(service.getUsers("111")).thenReturn(userError);
 
-  @Test
-  public void getComments_multipleReplies_whenRepliesRequestFailed()
-    throws IOException {
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult1 = new CompletableDeferred<>();
-    apiResult1.complete(Response.success(Arrays.asList(parentCommentResponse)));
-    when(service.getComments("1")).thenReturn(apiResult1);
+        Result<List<CommentResponse>> result = repository.getComments(List.of(11L));
 
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult2 = new CompletableDeferred<>();
-    apiResult2.complete(Response.error(400, errorResponseBody));
-    when(service.getComments("11,12")).thenReturn(apiResult2);
+        verify(service).getComments("11");
+        verify(service).getUsers("111");
+        Assert.assertEquals(Result.Success(List.of(reply1NoUser)), result);
+    }
 
-    CompletableDeferred<Response<List<User>>> apiResult3 = new CompletableDeferred<>();
-    apiResult3.complete(Response.success(Arrays.asList(user2)));
-    when(service.getUsers("222")).thenReturn(apiResult3);
+    private void withUsers(List<User> users, String ids) throws InterruptedException {
+        Call<List<User>> userResult = createSuccessCall(users);
+        whenever(service.getUsers(ids)).thenReturn(userResult);
+    }
 
-    Result<List<CommentResponse>> result = repository.getComments(
-      Arrays.asList(1L)
-    );
+    private void withComments(CommentResponse commentResponse, String ids) throws InterruptedException {
+        Call<List<CommentResponse>> resultParent = createSuccessCall(List.of(commentResponse));
+        whenever(service.getComments(ids)).thenReturn(resultParent);
+    }
 
-    VerificationMode verificationMode1 = verify(service).getComments("1");
-    verificationMode1.times(1);
+    private void withComments(List<CommentResponse> commentResponse, String ids) throws InterruptedException {
+        Call<List<CommentResponse>> resultParent = createSuccessCall(commentResponse);
+        whenever(service.getComments(ids)).thenReturn(resultParent);
+    }
 
-    VerificationMode verificationMode2 = verify(service).getComments("11,12");
-    verificationMode2.times(1);
 
-    VerificationMode verificationMode3 = verify(service).getUsers("222");
-    verificationMode3.times(1);
-
-    Assert.assertEquals(
-      Result.Success(flattenedCommentsWithoutReplies),
-      result
-    );
-  }
-
-  @Test
-  public void getComments_whenUserRequestFailed() throws IOException {
-    CompletableDeferred<Response<List<CommentResponse>>> apiResult1 = new CompletableDeferred<>();
-    apiResult1.complete(Response.success(Arrays.asList(replyResponse1)));
-    when(service.getComments("11")).thenReturn(apiResult1);
-
-    CompletableDeferred<Response<List<User>>> apiResult2 = new CompletableDeferred<>();
-    apiResult2.complete(Response.error(400, errorResponseBody));
-    when(service.getUsers("111")).thenReturn(apiResult2);
-
-    Result<List<CommentResponse>> result = repository.getComments(
-      Arrays.asList(11L)
-    );
-
-    VerificationMode verificationMode1 = verify(service).getComments("11");
-    verificationMode1.times(1);
-
-    VerificationMode verificationMode2 = verify(service).getUsers("111");
-    verificationMode2.times(1);
-
-    Assert.assertEquals(Result.Success(Arrays.asList(reply1NoUser)), result);
-  }
-
-  private void withUsers(List<User> users, String ids) {
-    Response<List<User>> userResult = Response.<List<User>>success(users);
-    whenever(service.getUsers(ids))
-      .thenReturn(CompletableDeferred.completedFuture(userResult));
-  }
-
-  private void withComments(CommentResponse commentResponse, String ids) {
-    Response<List<CommentResponse>> resultParent = Response.success(
-      List.of(commentResponse)
-    );
-    whenever(service.getComments(ids))
-      .thenReturn(new CompletableDeferred<>(resultParent));
-  }
-
-  private void withComments(
-    List<CommentResponse> commentResponses,
-    String ids
-  ) {
-    Response<List<CommentResponse>> resultParent = Response.success(
-      commentResponses
-    );
-    whenever(service.getComments(ids))
-      .thenReturn(new CompletableDeferred<>(resultParent));
-  }
 }
